app/assets/stylesheets/post_item.css
.postindex {
    margin-top: 20px;
}

.postindex h1 {
    font-size: 12px;
    font-weight: bold;
    color: rgb(82, 82, 82)
}

.postitem {
    border: 1px solid rgb(219, 219, 219);
    border-radius: 2px;
    background-color: white;
    margin: 20px 0px;
    position: relative;
}

.post-delete-btn {
    position: absolute;
    top: 15px;
    right: 15px;
    font-size: 12px;
    color: rgb(200, 200, 200);
}

.post-delete-btn:hover {
    color: rgb(136, 54, 54);
    cursor: pointer;
}

.post-edit-btn {
    right: 40px;
}

.post-content-picture {
    margin-right: 10px;
    margin-top: 0px;
}

.postitem-top {
    padding: 15px 15px 0px 15px;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
}

.post-content-author {
    font-size: 14px;
    font-weight: 600;
    margin: 3px 0px 0px 0px;
}

.post-content-author a {
    color: rgb(136, 54, 54)
}

.post-content-author a:hover {
    text-decoration: underline;
    cursor: pointer;
}

.post-content-time,
.post-content-city  {
    font-size: 13px;
    color: rgb(82, 82, 82);
    display: inline-block;
}

.post-content-time:hover,
.post-content-city:hover {
    text-decoration: underline;
    cursor: pointer;
}

.dot {
    font-size: 12px;
    color: rgb(168, 168, 168);
}

.post-content-body {
    font-size: 14px;
    padding: 10px 15px;
    line-height: 1.3;
    display: none;
}

.post-content-picture {
    overflow: hidden;
}

.post-content-body-picture {
    overflow: hidden;
}

.post-content-body-picture img {
    width: 100%;
    margin: auto;
}

.post-special-content {
    font-size: 16px;
    text-align: center;
    margin-bottom: 20px;
    display: block;
}

.fa-caret-right {
    margin: 0px 8px;
    color: gray;
    display: inline-block;
    font-size: 14px;
}

.post-edit-form {
    display: none;
    font-size: 14px;
    line-height: 1.3;
    border: 1px solid lightgray;
    margin: 7px 4px; 
}

.post-edit-form textarea {
    resize: none;
    font-size: 14px;
    width: 96%;
    padding: 2px 10px;
}

.post-edit-form button {
    font-size: 12px;
    padding: 3px 2px;
    margin-top: 0px;
    width: 90px;
    display: inline-block;
    border-radius: 1px;
}

.post-edit-form-btns {
    display: flex;
    justify-content: flex-end;
    background-color: rgb(238, 238, 238);
    padding-top: 10px;
    padding-right: 10px;
}

.post-edit-form div {
    font-size: 12px;
    padding: 3px 2px;
    margin-top: 0px;
    background-image: none;
    color: rgb(71, 71, 71);
    text-shadow: none;
    border: 1px solid gray;
    width: 90px;
    text-align: center;
    display: inline-block;
    margin-right: 10px;
    background-color: transparent;
    border-radius: 1px;
}

.post-edit-form div:hover {
    background-color: rgb(197, 197, 197);
    background-image: none;
}

p.post-display,
form.post-display {
    display: block;
}

.tag {
    font-weight: 500;
}

